{{$NEXT}}
          [Tests]
          - @TestingMania passes now except Kwalitee. use strict fails
            but we have something better in place already - strictures.
            
          [Remedies]
          - Fix conf finding logic so mojito_local.conf is not required.
          - Check for no recent docs before attempting to display recent docs list.

	      [Refactor]
          - Template.pm attributes and builders added and moved into roles.
          - Broke out Doc and Link Models from CRUD.

0.07      2011-03-09 23:03:56 America/Denver
          [Tests]
          - Plack::Test test suite for release mode.
          
          [Misc]
          - Explicitly state that Perl 5.10.1 is required.

0.06      2011-03-07 23:02:08 America/Denver
          [Enchantments]
          - mojito.conf with mojito_local.conf and $ENV{MOJITO_CONFIG} override option.
          - Expose /public/feed and /public/page views 
          

0.05      2011-03-07 08:26:26 America/Denver
          [Enchantments]
          - Digest Authentication required on all non /public URLs
          - implemented script/add_user.pl to add users to the DB for page access.
          - enabled setting both the db and collection in the DB role.
            Now we can get to a 'bench' database and a 'users' collection.
          
          [Refactor]
          - Middleware for Mojito object
          - Controller golfing
          - renamed notes database to 'mojito'
          
0.04      2011-02-28 22:43:00 America/Denver
          [Refactor]
          - A Mojito object is now a derived class of Mojito::Page.
            
0.03      2011-02-27 20:47:52 America/Denver
          [Enchantments]
          - base URL implemented so app can be mounted at root or not.
          - Added Mojito::Middleware so Mojito objects can be wrapped
            into the application.
          - Created Tatsumaki version of Mojito.
          
          [Refactor]